Modificar el diseño de algunas páginas.

--- a/biblioteca/src/app/home/personal-page/personal-page.component.html
+++ b/biblioteca/src/app/home/personal-page/personal-page.component.html
@@ -46,7 +46,7 @@
 
         <mat-form-field *ngIf="userUpdate">
           <mat-label>Email</mat-label>
-          <input matInput [(ngModel)]="userUpdate.email">
+          <input matInput [(ngModel)]="userUpdate.email" type="email">
         </mat-form-field>
 
         <mat-form-field *ngIf="userUpdate">
