Modificar el diseño de algunas páginas.

--- a/biblioteca/src/app/home/book-search-page/book-search-page.component.html
+++ b/biblioteca/src/app/home/book-search-page/book-search-page.component.html
@@ -29,7 +29,7 @@
         </ng-container>
       </mat-select>
     </mat-form-field>
-    <mat-form-field *ngIf="search">
+    <mat-form-field>
       <mat-label>{{placeholder}}</mat-label>
       <input matInput [(ngModel)]="search"/>
     </mat-form-field>
