--- a/biblioteca/src/app/app.component.html
+++ b/biblioteca/src/app/app.component.html
@@ -17,7 +17,7 @@
 
       <mat-card-content>
         <a (click)="openPersonalPage()"><mat-icon>person</mat-icon> Personal page</a>
-        <a><mat-icon>bookmark</mat-icon> My Bookmark</a>
+<!--        <a><mat-icon>bookmark</mat-icon> My Bookmark</a>-->
         <a routerLink="home" routerLinkActive="active" (click)="logout()"><mat-icon>logout</mat-icon> Logout</a>
       </mat-card-content>
       <mat-card-footer>
