--- a/biblioteca/src/app/home/home.component.css
+++ b/biblioteca/src/app/home/home.component.css
@@ -85,7 +85,7 @@ mat-card{
   border-radius: 10px;
   overflow: hidden;
   white-space: nowrap;
-  transform: translateY(13px);
+  transform:translateY(13px);
 }
 
 .wallet-box{
@@ -117,6 +117,17 @@ mat-card{
    font-weight: 600;
    margin: 0;
  }
+
+.txt{
+  padding: 6px;
+  text-align: left;
+  font-size: 24px;
+  color: #f2f2f2;
+  font-weight: 500;
+  margin: 0;
+  line-height: 26px;
+  transform: translateZ(20px);
+}
 
 .name{
   padding: 6px;
