--- a/biblioteca/src/app/login/login.component.css
+++ b/biblioteca/src/app/login/login.component.css
@@ -1,7 +1,7 @@
 .registration{
   color: white;
   text-decoration: underline;
-  display: block;
+  display: inline-block;
 }
 main{
   background-color: #3BAFBE;
