Corregidos algunos errores lógicos

--- a/biblioteca/src/app/home/book-page/book-page.component.css
+++ b/biblioteca/src/app/home/book-page/book-page.component.css
@@ -108,6 +108,11 @@ mat-card-content{
 .modify{
   margin-left: 10px;
 }
+.book-name{
+  margin-left: 10px;
+  display: block;
+  width: 100%;
+}
 
 .author-name{
   margin-left: 12px;
